<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:paddingHorizontal="20dp"
    tools:context=".Menu">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp">

        <Button
            android:id="@+id/ButtonSandwichesItaliano"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/italiano">
        </Button>

        <Button
            android:id="@+id/ButtonSandwichesChacarero"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/chacarero">
        </Button>

        <Button
            android:id="@+id/ButtonSandwichesBarrosLuco"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/barros_luco">
        </Button>

        <Button
            android:id="@+id/ButtonSandwichesBarrosJarpa"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/barros_jarpa">
        </Button>

        <Button
            android:id="@+id/ButtonSandwichesVegetariano"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textColor="@color/colorAccent"
            android:background="@color/colorPrimaryDark"
            android:text="@string/vegetariano">
        </Button>




    </LinearLayout>
</LinearLayout>